[gd_scene load_steps=12 format=3 uid="uid://c46u56kn4ir4y"]

[ext_resource type="PackedScene" uid="uid://ce4x3xa1n7wsx" path="res://scenes/background.tscn" id="1_6icab"]
[ext_resource type="PackedScene" uid="uid://c6kuvrcrxl2sr" path="res://scenes/ground.tscn" id="1_7x73t"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_dejiq"]
[ext_resource type="PackedScene" uid="uid://dfcsh5b7ftcru" path="res://scenes/player.tscn" id="2_rrhh7"]
[ext_resource type="PackedScene" uid="uid://b3lm148hvrifi" path="res://scenes/cats/green_cat.tscn" id="5_f3a1g"]
[ext_resource type="PackedScene" uid="uid://b2ygwns5dr211" path="res://scenes/ui/hud.tscn" id="5_mo7pu"]
[ext_resource type="PackedScene" uid="uid://dtasl0kw0cfjo" path="res://scenes/cats/blue_cat.tscn" id="7_7nnaf"]
[ext_resource type="PackedScene" uid="uid://c0waeo1kbmicg" path="res://scenes/ui/running_music.tscn" id="8_i004v"]
[ext_resource type="PackedScene" uid="uid://dwccscvhgbkaj" path="res://scenes/cats/pink_cat.tscn" id="9_0rni0"]
[ext_resource type="PackedScene" uid="uid://inor2v8tc0hs" path="res://scenes/ui/game_over.tscn" id="10_4c20w"]
[ext_resource type="PackedScene" uid="uid://xmcamt5xtmet" path="res://scenes/ui/menu.tscn" id="20_ym1el"]

[node name="Main" type="Node"]
script = ExtResource("1_dejiq")
blue_cat = ExtResource("7_7nnaf")
green_cat = ExtResource("5_f3a1g")
pink_cat = ExtResource("9_0rni0")

[node name="Background" parent="." instance=ExtResource("1_6icab")]

[node name="Ground" parent="." instance=ExtResource("1_7x73t")]

[node name="Player" parent="." instance=ExtResource("2_rrhh7")]
position = Vector2(150, 444)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="HUD" parent="." instance=ExtResource("5_mo7pu")]

[node name="GameOver" parent="." node_paths=PackedStringArray("main") instance=ExtResource("10_4c20w")]
main = NodePath("..")

[node name="RunningMusic" parent="." instance=ExtResource("8_i004v")]

[node name="Menu" parent="." instance=ExtResource("20_ym1el")]
visible = false

[connection signal="game_end" from="." to="GameOver" method="_on_game_end"]
[connection signal="reset_game" from="." to="HUD" method="reset"]
[connection signal="reset_game" from="." to="GameOver" method="_on_reset_game"]
[connection signal="start_game" from="." to="HUD" method="_on_start_game"]
[connection signal="time_expired" from="HUD" to="." method="end_game"]
